--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 *{
+	box-sizing: border-box;
 	margin: 0px;
 	padding: 0px;
 }
 .error{
 	height: 40px;
 	opacity: 0.0;
+	
 	transition: 0.5s;
 	-moz-transition: 0.5s;
 	-webkit-transition: 0.5s;
